# kivy-ios

./: .gitignore  .travis.yml  CHANGELOG.md  CONTACT.md  CONTRIBUTING.md  FAQ.md  MANIFEST.in  Makefile  README.md  README.rst  archive.sh  biglink  build_all.sh  build_freetype.sh  build_kivy.sh  build_python.sh  build_sdl.sh  build_sdlmixer.sh  build_sdlttf.sh  environment.sh  liblink  pybuilddir.txt  pyproject.toml  reduce-python.sh  reduce_python.sh  requirements.txt  setup.cfg  setup.py  toolchain.py  tox.ini
.ci/: constants.py  rebuild_updated_recipes.py  test_project.sh  utils.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: kivy_ios.yml  no-response.yml  pypi-release.yml  setup.yml  support.yml
SDL/: README.ds  configure
SDL/.hg/: dirstate
SDL/VisualC/: SDL_VS2008.sln  SDL_VS2010.sln
SDL/build-scripts/: fatbuild.sh
SDL/include/: SDL_config.h.in  SDL_config_iphoneos.h  SDL_events.h  SDL_rect.h  SDL_render.h  SDL_surface.h
SDL/src/: SDL_assert.c  SDL_error_c.h  SDL_log.c
SDL/test/: Makefile.in  testcursor.c  testdraw2.c  testgl.c  testrumble.c  testscale.c  testspriteminimal.c  testvidinfo.c  testwm2.c  threadwin.c
app/: iOS_python_test-Info.plist  main.m
app/iOS-python-test.xcodeproj/: project.pbxproj
kivy_ios/: context_managers.py  toolchain.py  util.py
kivy_ios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python_files/: ModulesSetup  Python-2.6.5-xcompile.patch
recipes/: audiostream.py  hostpython.py  python.py
src/: tremor-configure.patch
tools/: biglink  build-all.sh  build-audiostream.sh  build-ffmpeg.sh  build-freetype.sh  build-ios.sh  build-kivy.sh  build-libffi.sh  build-libjpeg.sh  build-lxml.sh  build-numpy.sh  build-openssl-link.sh  build-openssl.sh  build-pil.sh  build-plyer.sh  build-pyobjus.sh  build-python.sh  build-sdl.sh  build-sdlmixer.sh  build-sdlttf.sh  build-ssllink.sh  build_all.sh  clean_python.sh  create-xcode-project.sh  cythonize.py  environment.sh  liblink  link-fat-lib.sh  populate-project.sh  reduce-python.sh
(+5007 files in other folders)
