[metadata]
name = kivy-ios
version = 2022.07.19
description = Kivy for iOS
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
author = The Kivy team
author_email = kivy-dev@googlegroups.com
url = https://github.com/kivy/kivy-ios

[options]
python_requires >= "3.6.0"
install_requires =
    Cython
    cookiecutter
    pbxproj
    Pillow
    requests
    sh
packages = find:
# note this is a bit excessive as it includes absolutely everything
# make sure you run with from a clean directory
include_package_data = True

[options.entry_points]
console_scripts =
    toolchain = kivy_ios.toolchain:main