[metadata]
name = kivy-ios
version = 2024.03.17
description = A toolchain to compile the necessary libraries for iOS to run Kivy applications.
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
author = The Kivy team
author_email = kivy-dev@googlegroups.com
url = https://github.com/kivy/kivy-ios
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: MacOS :: MacOS X
    Operating System :: iOS
project_urls =
    Source=https://github.com/kivy/kivy-ios
    Bug Reports=https://github.com/kivy/kivy-ios/issues

[options]
python_requires >= "3.8.0"
install_requires =
    cookiecutter
    pbxproj
    Pillow
    sh
packages = find:
# note this is a bit excessive as it includes absolutely everything
# make sure you run with from a clean directory
include_package_data = True

[options.entry_points]
console_scripts =
    toolchain = kivy_ios.toolchain:main